# Laboratorio

./: CMakeLists.txt  File.cpp  File.h  FileLoader.cpp  FileLoader.h  GUI.cpp  GUI.h  Observer.h  Subject.h  main.cpp
test/: CMakeLists.txt  runAllTests.cpp  testFile.cpp  testFileLoader.cpp  testObserver.cpp  testObserver.h
